--- a/paper/model_param.tex
+++ b/paper/model_param.tex
@@ -1,135 +1,136 @@
-\begin{table}
+\begin{sidewaystable}
+\footnotesize
 \begin{minipage}[t]{0.5\textwidth}
 \centering
 
-\begin{tabular}[t]{|>{}c|c|c|c|c|>{}c|}
+\begin{tabular}[t]{>{}ccccc>{}c}
 \hline
-\multicolumn{1}{|c|}{\textbf{ }} & \multicolumn{1}{|c|}{\textbf{ }} & \multicolumn{4}{|c|}{\textbf{Data Driven Simulation Scenario}} \\
-\cline{3-6}
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Data Driven Simulation Scenario}} \\
+\cmidrule{3-6}
 \textbf{Model} & \textbf{Term} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4}\\
 \hline
  & (Intercept) & -0.624 & -0.624 & -0.624 & -0.586\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)}$ & 0.308 & 0.308 & 0.308 & 0.311\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(2)}$ & -0.046 & -0.046 & -0.046 & -0.046\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(3)}$ & -0.015 & 0.385 & 0.385 & 0.384\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(4)}$ & --- & --- & --- & -0.035\\
-\cline{2-6}
+\cmidrule{2-6}
  & $(L^{(2)})^2$ & 0.001 & 0.001 & 0.001 & 0.001\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)} \times L^{(3)}$ & 0.400 & 0.400 & 0.400 & 0.100\\
-\cline{2-6}
+\cmidrule{2-6}
 \multirow{-8}{*}{\centering\arraybackslash $\eta~\text{or}~\tilde\eta$} & $L^{(3)} \times L^{(4)}$ & --- & --- & --- & -0.020\\
-\cline{1-6}
+\cmidrule{1-6}
  & (Intercept) & -0.207 & -0.207 & -0.207 & -0.200\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)}$ & 0.031 & 0.031 & 0.031 & 0.032\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(2)}$ & -0.002 & -0.002 & -0.002 & -0.002\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(3)}$ & 0.023 & 0.023 & 0.023 & 0.022\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(4)}$ & --- & --- & --- & -0.004\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(5)}$ & --- & --- & --- & 0.200\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)} \times L^{(3)}$ & -0.305 & -0.305 & -0.305 & -0.305\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(4)} \times L^{(5)}$ & --- & --- & --- & -0.001\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A$ & 0.045 & 0.045 & 0.045 & 0.047\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(1)}$ & 0.413 & 0.313 & 0.313 & 0.313\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(2)}$ & -0.003 & -0.001 & -0.001 & 0.005\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(3)}$ & 0.130 & 0.080 & 0.080 & 0.081\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(4)}$ & --- & --- & --- & -0.002\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(5)}$ & --- & --- & --- & 0.100\\
-\cline{2-6}
+\cmidrule{2-6}
 \multirow{-15}{*}{\centering\arraybackslash $\mu~\text{or}~\tilde\mu$} & $\sigma$ & 0.109 & 0.109 & 0.109 & 0.109\\
-\cline{1-6}
+\cmidrule{1-6}
  & (Intercept) & 1.824 & 1.824 & 1.824 & 1.824\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)}$ & 0.087 & 0.087 & 0.087 & 0.087\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(2)}$ & 0.010 & 0.010 & 0.010 & 0.010\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(3)}$ & -2.662 & -2.662 & -2.662 & -2.662\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(2)} \times L^{(3)}$ & -0.149 & -0.149 & -0.149 & -0.149\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A$ & 2.922 & 2.922 & 2.922 & 2.922\\
-\cline{2-6}
+\cmidrule{2-6}
  & $Y$ & 2.180 & 2.180 & 2.180 & 2.180\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A\times Y$ & 3.043 & 3.043 & 3.043 & 3.043\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(2)}$ & 0.159 & 0.159 & 0.159 & 0.159\\
-\cline{2-6}
+\cmidrule{2-6}
 \multirow{-10}{*}{\centering\arraybackslash $\pi$} & $Y \times L^{(1)}$ & 2.321 & 2.321 & 2.321 & 2.321\\
 \hline
 \end{tabular}
 \end{minipage}
 \begin{minipage}[t]{0.5\textwidth}
 
-\begin{tabular}[t]{|>{}c|c|c|c|c|>{}c|}
+\begin{tabular}[t]{>{}ccccc>{}c}
 \hline
-\multicolumn{1}{|c|}{\textbf{ }} & \multicolumn{1}{|c|}{\textbf{ }} & \multicolumn{4}{|c|}{\textbf{Data Driven Simulation Scenario}} \\
-\cline{3-6}
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Data Driven Simulation Scenario}} \\
+\cmidrule{3-6}
 \textbf{Model} & \textbf{Term} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4}\\
 \hline
  & (Intercept) & 0.867 & 0.939 & 0.939 & 0.900\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)}$ & 0.075 & 0.074 & 0.074 & 0.272\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(2)}$ & < 0.001 & -0.018 & -0.018 & 0.001\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(3)}$ & -0.034 & -0.033 & -0.033 & -0.035\\
-\cline{2-6}
+\cmidrule{2-6}
  & $(L^{(2)})^2$ & --- & < 0.001 & < 0.001 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)} \times L^{(2)}$ & --- & --- & --- & 0.001\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)} \times L^{(3)}$ & --- & --- & --- & 0.100\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A$ & 0.303 & 0.102 & 0.302 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $Y$ & -0.765 & -0.696 & -0.696 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A\times Y$ & -0.500 & -0.050 & -0.500 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $Y \times L^{(2)}$ & --- & -0.005 & -0.005 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
 \multirow{-12}{*}{\centering\arraybackslash $\lambda_1~\text{or}~\tilde\lambda_1$} & $\alpha$ & 3.619 & 1.000 & 1.000 & 3.616\\
-\cline{1-6}
+\cmidrule{1-6}
  & (Intercept) & --- & --- & -1.386 & -1.386\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(1)}$ & --- & --- & --- & 0.030\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(2)}$ & --- & --- & --- & 0.050\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(3)}$ & --- & --- & --- & 0.025\\
-\cline{2-6}
+\cmidrule{2-6}
  & $L^{(4)}$ & --- & --- & 0.075 & 0.075\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A$ & --- & --- & --- & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $Y$ & --- & --- & -4.000 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A\times Y$ & --- & --- & 2.000 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $A \times L^{(4)}$ & --- & --- & -0.010 & ---\\
-\cline{2-6}
+\cmidrule{2-6}
  & $Y \times L^{(2)}$ & --- & --- & --- & ---\\
-\cline{2-6}
+\cmidrule{2-6}
 \multirow{-11}{*}{\centering\arraybackslash $\lambda_2~\text{or}~\tilde\lambda_2$} & $Y \times L^{(4)}$ & --- & --- & 0.010 & ---\\
 \hline
 \end{tabular}
 \end{minipage}
-\end{table}
+\end{sidewaystable}
